--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.DS_Store #macos
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -104,3 +104,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.DS_Store
