add ms office to .gitignore

--- a/simple_arm_catkin_ws/.gitignore
+++ b/simple_arm_catkin_ws/.gitignore
@@ -49,3 +49,21 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+
+# Word temporary
+~$*.doc*
+
+# Word Auto Backup File
+Backup of *.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsd*
