--- a/catkin_ws/.gitignore
+++ b/catkin_ws/.gitignore
@@ -49,3 +49,23 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Word Auto Backup File
+Backup of *.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsd*
