--- a/3D_perception_project/output_3.yaml
+++ b/3D_perception_project/output_3.yaml
@@ -8,9 +8,32 @@ object_list:
       y: 0.0
       z: 0.0
     position:
-      x: 0.49285411834716797
-      y: 0.08348587155342102
-      z: 0.7257137298583984
+      x: 0.43989652395248413
+      y: 0.21708270907402039
+      z: 0.681384265422821
+  place_pose:
+    orientation:
+      w: 0.0
+      x: 0.0
+      y: 0.0
+      z: 0.0
+    position:
+      x: 0
+      y: 0.71
+      z: 0.605
+  test_scene_num: 3
+- arm_name: left
+  object_name: book
+  pick_pose:
+    orientation:
+      w: 0.0
+      x: 0.0
+      y: 0.0
+      z: 0.0
+    position:
+      x: 0.49415215849876404
+      y: 0.08426973968744278
+      z: 0.7262049317359924
   place_pose:
     orientation:
       w: 0.0
@@ -31,9 +54,9 @@ object_list:
       y: 0.0
       z: 0.0
     position:
-      x: 0.27934831380844116
-      y: 0.561948835849762
-      z: 0.7266491055488586
+      x: 0.28407856822013855
+      y: -0.5591538548469543
+      z: 0.6952369809150696
   place_pose:
     orientation:
       w: 0.0
@@ -54,9 +77,9 @@ object_list:
       y: 0.0
       z: 0.0
     position:
-      x: 0.2852567434310913
-      y: -0.5591643452644348
-      z: 0.6968556046485901
+      x: 0.5891175866127014
+      y: -0.21838347613811493
+      z: 0.7052428722381592
   place_pose:
     orientation:
       w: 0.0
@@ -77,9 +100,9 @@ object_list:
       y: 0.0
       z: 0.0
     position:
-      x: 0.6080045104026794
-      y: 0.28198906779289246
-      z: 0.6465750932693481
+      x: 0.6081700325012207
+      y: 0.2827567458152771
+      z: 0.6468578577041626
   place_pose:
     orientation:
       w: 0.0
@@ -100,9 +123,9 @@ object_list:
       y: 0.0
       z: 0.0
     position:
-      x: 0.45519599318504333
-      y: -0.04463342949748039
-      z: 0.6749929785728455
+      x: 0.6119726896286011
+      y: 0.14166449010372162
+      z: 0.6805914044380188
   place_pose:
     orientation:
       w: 0.0
@@ -123,9 +146,9 @@ object_list:
       y: 0.0
       z: 0.0
     position:
-      x: 0.439846009016037
-      y: 0.21723546087741852
-      z: 0.6824894547462463
+      x: 0.6798136234283447
+      y: 0.004762222524732351
+      z: 0.6754557490348816
   place_pose:
     orientation:
       w: 0.0
@@ -135,28 +158,5 @@ object_list:
     position:
       x: 0
       y: -0.71
-      z: 0.605
-  test_scene_num: 3
-- arm_name: left
-  object_name: glue
-  pick_pose:
-    orientation:
-      w: 0.0
-      x: 0.0
-      y: 0.0
-      z: 0.0
-    position:
-      x: 0.6116812229156494
-      y: 0.14177517592906952
-      z: 0.6806520223617554
-  place_pose:
-    orientation:
-      w: 0.0
-      x: 0.0
-      y: 0.0
-      z: 0.0
-    position:
-      x: 0
-      y: 0.71
       z: 0.605
   test_scene_num: 3
